--- a/css/init.scss
+++ b/css/init.scss
@@ -1200,25 +1200,21 @@ padding: 1em;
     
   .disclosure--btn {
   border-radius: em(5);
-  font-size: inherit;
   margin: em(4) 0;
-  
-    .open {
-    background-color: #69788C;
-    }
-
   }
 
   .disclosure--content {
   background-color: transparent;
   border-radius: em(5);
   border: rem(1) #cccccc solid;
-  margin: em(4) 0;
+  margin: 6px 0;
   padding: 0 em(16);
   }
 
   button.reset {
   z-index: 2;
+  top: 13px;
+  right: 16px;
   }
     
 }
