--- a/css/init.scss
+++ b/css/init.scss
@@ -1200,10 +1200,13 @@ width: calc(30rem / 16);
 
 body.extension-active {
 padding: 1em; 
+}
+
+body.extension-active, body#rad-baseline {
     
   .disclosure--btn {
   border-radius: em(5);
-  margin: em(4) 0;
+  margin: em(6) 0;
   }
 
   .disclosure--content {
