--- a/css/init.scss
+++ b/css/init.scss
@@ -1232,7 +1232,7 @@ body#rad-baseline {
     border-radius: 5px; 
     }
 
-    &__content {
+    &__panel {
     background-color: transparent;
     border-radius: 5px;
     border: 1px #cccccc solid;
