--- a/css/init.scss
+++ b/css/init.scss
@@ -1227,30 +1227,16 @@ padding: 1em;
 body#rad-baseline {
 
   .accordion {
-
-    @media (min-width: 55em) {
-  
-      grid-template-columns: repeat(3, 1fr); 
-  
-    } 
-        
+  --accordion-panel-default: #fff;
+  --accordion-pointer-size: calc(30rem / 16);
+  --accordion-column-large: 3;
+     
     &__toggle {
     border-radius: 5px; 
     }
 
     &__panel {
-    background-color: transparent;
-    border-radius: 5px;
-    border: 1px #cccccc solid;
-    margin-block: 3px;
     padding-block: 0;
-
-      @media (min-width: 55em) {
-  
-        grid-column: 1 / span 3;
-  
-      }
-
     }
 
   }
