--- a/css/init.scss
+++ b/css/init.scss
@@ -1234,7 +1234,14 @@ body#rad-baseline {
   --accordion-toggle-border-radius: 5px; 
 
     &__toggle {
-    min-height: calc(100rem / 16);
+    overflow: hidden;
+
+      @media (min-width: 55em) {
+
+        min-height: calc(100rem / 16);
+
+      }
+
     }
 
     &__panel {
