--- a/css/init.scss
+++ b/css/init.scss
@@ -355,39 +355,6 @@ height: auto;
 width: 100%;
 }
 
-// Accessibility Patch Page
-
-.bug {
-border: rem(1) #ccc solid;
-margin: em(16) 0;
-padding: 0 em(16) em(16);
-
-  dl {
-  margin: 0;
-  }
-  
-  dt {
-  font-weight: bold;
-
-    &::after {
-    content: ":";
-    }
-
-  }
-
-  dt, dd {
-  display: inline-block;
-  }
-    
-  dd {
-  margin-left: .5em;
-  }
-
-  &.warning {
-  padding: 0 em(16) em(16);
-  }
-
-}
 
 .access-link {
 background-color: #777;
@@ -541,11 +508,32 @@ padding: em(16);
 
   h2, h3 {
   color: inherit;
-  //margin-block-start: 0;
+  margin-block-start: 0;
   }
       
   p {
   margin: 0;
+  }
+
+  dl {
+  margin: 0;
+  }
+    
+  dt {
+  font-weight: bold;
+  
+    &::after {
+    content: ":";
+    }
+  
+  }
+  
+  dt, dd {
+  display: inline-block;
+  }
+      
+  dd {
+  margin-left: .5em;
   }
       
 }
