--- a/css/init.scss
+++ b/css/init.scss
@@ -106,6 +106,25 @@ font: 100%/2 "Graphik", $fallback-font;
   
 }
 
+// Ensure that all placeholder text is contrast friendly.
+
+::-moz-placeholder {
+color: curretColor;
+opacity: 1;
+}
+      
+::-webkit-input-placeholder {
+color: currentColor;
+}
+  
+/* Universal Focus Outline */
+  
+:focus-visible {
+box-shadow: 0 0 0 .25rem white;
+outline: .375rem double black;
+border-radius: .125rem;
+}
+
 a {
 
   &[target="_blank"] {
