--- a/css/init.scss
+++ b/css/init.scss
@@ -577,7 +577,8 @@ border-color: orange;
 }
 
 .issue {
-border: rem(1) #ccc solid;
+background-color: #eee;
+border-left-color: #666;
 }
 
 .warning-info {
