--- a/css/init.scss
+++ b/css/init.scss
@@ -518,7 +518,7 @@ border-color: #9e4307;
 
 }
 
-.experimental, .warning, .note, .reminder, .issue {
+.experimental, .warning, .note, .reminder, .issue, .best-practice {
 border-left-width: em(4);
 border-left-style: solid;
 margin-top: em(16);
@@ -579,6 +579,11 @@ border-color: orange;
 .issue {
 background-color: #eee;
 border-left-color: #666; 
+}
+
+.best-practice {
+background-color: lightgreen;
+border-left-color: green;
 }
 
 .warning-info {
