--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
   {% assign selectedFeeds = site.data.module.feeds %}
   {% assign allSelections = selectedComponents | concat: selectedFeeds %}
 
+  {%- include icon.html -%}
+
 {%- endif -%}
 
 <!DOCTYPE html>
@@ -166,7 +168,7 @@
 
     {%- if component %}
 
-    <h1 class="primary-heading">{{ component.title }} v{{ component.version }}</h1>
+    <h1 class="primary-heading">{{ component.title }} v{{ component.version }} <a class="anchor" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">{{ iconAnchor }} <span class="sr-only">Anchor ({{ component.title }})</span></a></h1>
 
     {%- else if page.title %}
 
