--- a/css/init.scss
+++ b/css/init.scss
@@ -990,6 +990,10 @@ margin: 0 auto;
 padding: 0 em(16);
 }
 
+#content {
+width: 100%; // Pages that do not meet max-width set above (1600) will appear less wide when not enough content is in it, so we need to force it to 100%;
+}
+
 #share-button {
 background-color: $highlight-color;
 border-radius: em(5);
