--- a/css/init.scss
+++ b/css/init.scss
@@ -820,6 +820,10 @@ background-color: $highlight-color;
   line-height: normal;
   text-align: end;
   text-decoration: none;
+
+    a {
+    display: block;
+    }
   
     img {
     width: rem(220);
