--- a/css/init.scss
+++ b/css/init.scss
@@ -310,6 +310,7 @@ font-size: rem(8);
 table {
 border-collapse: collapse;
 border-inline-end: $highlight-color 1px solid;
+border-inline-start: $highlight-color 1px solid;
 margin: 0;
 
   @media(min-width: em(680)) {
