--- a/css/init.scss
+++ b/css/init.scss
@@ -442,6 +442,7 @@ border-left: em(4) #000 solid;
 color: #000;
 margin: em(16) 0;
 padding: em(16);
+text-wrap: balance;
 
   a, button, h3 {
   color: inherit;
