--- a/css/init.scss
+++ b/css/init.scss
@@ -453,6 +453,7 @@ text-wrap: balance;
 
   &__heading {
   align-items: center;
+  color: inherit;
   display: grid;
   gap: 0.5em;
   grid-auto-flow: column;
