--- a/css/init.scss
+++ b/css/init.scss
@@ -308,6 +308,7 @@ border-radius: em(4);
 white-space: pre;
 white-space: pre-wrap;
 word-wrap: break-word;
+overflow-wrap: anywhere;
 
   code {
   display: block;
