--- a/css/init.scss
+++ b/css/init.scss
@@ -127,7 +127,7 @@ border-radius: .125rem;
 
 a[target="_blank"], button {
 
-  img[src*="new-tab"], img[src*="btn-ai"] {
+  img[src*="new-tab"], img[src*="new-window"], img[src*="btn-ai"] {
   display: inline-block;
   height: calc(14em/16);
   margin-inline-start: em(8);
@@ -136,7 +136,6 @@ a[target="_blank"], button {
   }
 
 }
-
 
 body {
 margin: 1em;
