--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -353,7 +353,7 @@
 
   <footer id="contentinfo">
 
-    <p><small>&copy; {{ "now" | date: "%Y" }} {{ site.company-name }}. An equal opportunity employer. <a href="{{ site,baseurl }}/contribute/">Contributions</a> to this project are welcome. Please see our <a href="/privacy/">privacy statement</a>.</small></p>
+    <p><small>&copy; {{ "now" | date: "%Y" }} {{ site.company-name }}. An equal opportunity employer. <a href="{{ site.baseurl }}/contribute/">Contributions</a> to this project are welcome. Please see our <a href="/privacy/">privacy statement</a>.</small></p>
 
   </footer>
 
